Updates de la figure

--- a/PFlowsPaper/PFlowsPaper.tex
+++ b/PFlowsPaper/PFlowsPaper.tex
@@ -111,6 +111,8 @@
 
 Figure ?? summarizes the phosphorus flows in the province of Ontario. It can be observed that the flow of of phosphorus through the anthropogenic activities are divided into 3 independent networks, i.e., the flow of phosphorus involved the production and processing of food (including the treatment of wastewater), the flow of phosphorus used in the steel and chemical industries, and the phosphorus involved in the forestry industry.
 
+The production of animal food products exhibits a lower phosphorus use efficiency than the production of plant base products, similarly to the use effciciency of other resources such as water CITE HERE, CALCULAR ENTRA VS SALE!
+
 \subsection{Phosphorus recovery techniques \textbf{(This section could be Supplementary Material)}}
 Brief overview of potential P recovery techniques for each sector
 \subsubsection{Agricultural sector}
