--- a/PFlowsPaper/references.bib
+++ b/PFlowsPaper/references.bib
@@ -479,7 +479,7 @@
   title = {{Animal Feeding Operations (AFO) and Concentrated Animal Feeding Operations (CAFO)}},
   howpublished = "\url{https://www.nrcs.usda.gov/wps/portal/nrcs/main/national/plantsanimals/livestock/afo/}",
   year = {2011}, 
-  note = "[Online; accessed 10-August-2020]"
+  note = "[Online; accessed 10-August-2020]",
 }
   
 @article{Dzombak,
@@ -863,4 +863,70 @@ issn = "0921-3449",
 doi = "https://doi.org/10.1016/j.resconrec.2020.105199",
 url = "http://www.sciencedirect.com/science/article/pii/S0921344920305164",
 author = "A.M. Sampat and Andrea Hicks and Gerardo J. Ruiz-Mercado and Victor M. Zavala",
+}
+
+@incollection{Kausar19,
+author = {Sayma Samreen and Sharba Kausar},
+title = {Phosphorus Fertilizer: The Original and Commercial Sources},
+booktitle = {Phosphorus},
+publisher = {IntechOpen},
+year = {2019},
+editor = {Tao Zhang},
+chapter = {6},
+}
+
+@article{pingali2012green,
+  title={Green revolution: impacts, limits, and the path ahead},
+  author={Pingali, Prabhu L},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={109},
+  number={31},
+  pages={12302--12308},
+  year={2012},
+  publisher={National Acad Sciences}
+}
+
+@misc{UN_Phosphorus,
+  author = {{United Nations Environment Programme}},
+  title = {{Resolution adopted by the United Nations Environment Assembly on 2 March 2022, UNEP/EA.5 Res.2, on Sustainable nitrogen management}},
+  year = {2022},
+}
+
+@misc{FAO_UkraineWar,
+  author = {{Food and Agriculture Organization of the United Nations}},
+  title = {{The importance of Ukraine and the Russian Federation for global agricultural markets and the risks associated with the war in Ukraine}},
+  year = {2022},
+}
+
+@article{cordell2009story,
+  title={The story of phosphorus: global food security and food for thought},
+  author={Cordell, Dana and Drangert, Jan-Olof and White, Stuart},
+  journal={Global environmental change},
+  volume={19},
+  number={2},
+  pages={292--305},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{reid2019addressing,
+  title={Addressing imbalances in phosphorus accumulation in Canadian agricultural soils},
+  author={Reid, Keith and Schneider, Kimberley and Joosse, Pamela},
+  journal={Journal of environmental quality},
+  volume={48},
+  number={5},
+  pages={1156--1166},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{ehlert2003potential,
+  title={Potential role of phosphate buffering capacity of soils in fertilizer management strategies fitted to environmental goals},
+  author={Ehlert, Phillip and Morel, Christian and Fotyma, Mariusz and Destain, Jean-Pierre},
+  journal={Journal of plant nutrition and soil science},
+  volume={166},
+  number={4},
+  pages={409--415},
+  year={2003},
+  publisher={Wiley Online Library}
 }
