--- a/PFlowsPaper/PFlowsPaper.tex
+++ b/PFlowsPaper/PFlowsPaper.tex
@@ -72,6 +72,11 @@ Phosphorus is an essential for production of food which has been intensively use
 However, the intensive use of fertilizers in agriculture has resulted in the over-application of phosphorus in many regions worldwide REF, while the run of intensive livestock production facilities, also known as concentrated animal feeding operations (CAFOs) \citep{animal_unit_definition}, result in important difficulties in the management of the large amounts of manure produced, which is often spread in lands in the vicinity of CAFOs, which also leads to the accumulation of phosphorus in soil. Soil acts as a phosphorus reservoir \citep{ehlert2003potential}, building-up a legacy P that can be used for future crops, but also can be transported to waterbodies by erosion and runoff leading to the eutrophication of aquatic ecosystems.
 
 The dual dimension of the anthropogenic use of phosphorus, i.e., its key role in the food production system and the negative environmental impacts associated with the phosphorus used in intensive agricultural techniques, has been stated by the United Nations Environment Assembly in the resolution UNEP/EA.5/Res.2 \citep{UN_Phosphorus}. An additional factor to be considered for addressing the phosphorus challenge is the non-renewable nature of phosphorus, since the phosphorus consumed is not replenished by natural means at human time scale, and there is currently no known synthetic substitute for this material \citep{cordell2009story}. Since the global phosphorus reserves are concentrated in a few number of regions, the supply of phosphorus from a limited number of global supply chains lacks resiliency and it has been proven that it can be globally disrupted by regional events and conflicts, resulting geopolitical tensions \citep{FAO_UkraineWar}. As a consequence, the recovery and recycling of phosphorus is not just a desirable but also a necessary approach to assure a sustainable, reliable, and sovereign food production system. 
+
+Although the main uses of phosphorus are in the agri-food sector, phosphorus is also involved in other industrial activities, including steel, chemical, and forestry industries. Henceforth, phosphorus is a key material for many aspects of human development. As a result, mapping the phosphorus flows involved in human activities to detect opportunities for recovery and recycling is essential for, in a second stage, assess amount of phosphorus that is viable to recover, the economical costs involved, and the enhancement in terms of resiliency of the regional food production system, savings from the reduction of phosphorus imports, and the mitigation of phosphorus pollution on the region implementing strategies for phosphorus recovery and recycling. The quantification of phosphorus flows has been addressed in previous works in the literature for certain sectors such as the agri-food sector \citep{boh2020nitrogen, zhou2021model, nesme2018global}. Additionally, studies on the global phosphorus flows have also been performed \citep{villalba2008global, chen2016half}, although these studies tend to have a low flow resolution since these are aggregated by major sectors. Additionally, the works quantifying phosphorus often include qualitative recommendations to improve the phosphorus use efficiency and recycling \citep{van2016phosphorus, senthilkumar2012conceptual}, but often they do not include quantitivae assessments on the amount of phopshorus which recovery is feasible along with the costs involved. Conversely, those works focused on estimating the recoverable phosphorus and the associated recovery cost target specific flows, lacking a holistic perspective of the phosphorus flows in the various human activities \citep{martin2021geospatial, sampat2018technologies}.
+
+In this work, we have selected the Canadian province of Ontario for mapping the phosphorus flows involved in the agri-food, industrial and urban sectors. This data is used to assess the amount of phosphorus that could be recovered within the province, considering different scenarios regarding the availability of phosphorus recovery technologies, and to estimate the costs associated with the recovery of phosphorus. Finally, we discuss the implications on the use of phosphorus in Ontario that would be derived from implementing active phosphorus recovery and recycling approaches.
+
 \section{Methods}
 %\subsection{Scope}
 %We seek to quantify the phosphorus flows used in human activities, including the agricultural, urban, and industrial sectors. 
