--- a/PFlowsPaper/references.bib
+++ b/PFlowsPaper/references.bib
@@ -930,3 +930,95 @@ chapter = {6},
   year={2003},
   publisher={Wiley Online Library}
 }
+
+@article{boh2020nitrogen,
+  title={Nitrogen and phosphorus flows in Ontario’s food systems},
+  author={Boh, Michael Yongha and Clark, Osborne Grant},
+  journal={Resources, Conservation and Recycling},
+  volume={154},
+  pages={104639},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{villalba2008global,
+  title={Global phosphorus flows in the industrial economy from a production perspective},
+  author={Villalba, Gara and Liu, Yi and Schroder, Hans and Ayres, Robert U},
+  journal={Journal of Industrial ecology},
+  volume={12},
+  number={4},
+  pages={557--569},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{zhou2021model,
+  title={Model-based analysis of phosphorus flows in the food chain at county level in China and options for reducing the losses towards green development},
+  author={Zhou, Jichen and Jiao, Xiaoqiang and Ma, Lin and de Vries, Wim and Zhang, Fusuo and Shen, Jianbo},
+  journal={Environmental Pollution},
+  volume={288},
+  pages={117768},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{van2016phosphorus,
+  title={Phosphorus flows and balances of the European Union Member States},
+  author={Van Dijk, Kimo C and Lesschen, Jan Peter and Oenema, Oene},
+  journal={Science of the Total Environment},
+  volume={542},
+  pages={1078--1093},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{nesme2018global,
+  title={Global phosphorus flows through agricultural trade},
+  author={Nesme, Thomas and Metson, Genevi{\`e}ve S and Bennett, Elena M},
+  journal={Global Environmental Change},
+  volume={50},
+  pages={133--141},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{senthilkumar2012conceptual,
+  title={Conceptual design and quantification of phosphorus flows and balances at the country scale: The case of France},
+  author={Senthilkumar, Kalimuthu and Nesme, Thomas and Mollier, Alain and Pellerin, Sylvain},
+  journal={Global Biogeochemical Cycles},
+  volume={26},
+  number={2},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{chen2016half,
+  title={A half-century of global phosphorus flows, stocks, production, consumption, recycling, and environmental impacts},
+  author={Chen, Minpeng and Graedel, TE},
+  journal={Global Environmental Change},
+  volume={36},
+  pages={139--152},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{martin2021geospatial,
+  title={A geospatial environmental and techno-economic framework for sustainable phosphorus management at livestock facilities},
+  author={Mart{\'\i}n-Hern{\'a}ndez, Edgar and Mart{\'\i}n, Mariano and Ruiz-Mercado, Gerardo J},
+  journal={Resources, Conservation and Recycling},
+  volume={175},
+  pages={105843},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{sampat2018technologies,
+  title={Technologies and logistics for phosphorus recovery from livestock waste},
+  author={Sampat, Apoorva M and Martin-Hernandez, Edgar and Mart{\'\i}n, Mariano and Zavala, Victor M},
+  journal={Clean Technologies and Environmental Policy},
+  volume={20},
+  number={7},
+  pages={1563--1579},
+  year={2018},
+  publisher={Springer}
+}
