--- a/PFlowsPaper/references.bib
+++ b/PFlowsPaper/references.bib
@@ -932,7 +932,7 @@ chapter = {6},
 }
 
 @article{boh2020nitrogen,
-  title={Nitrogen and phosphorus flows in Ontario’s food systems},
+  title={{Nitrogen and phosphorus flows in Ontario’s food systems}},
   author={Boh, Michael Yongha and Clark, Osborne Grant},
   journal={Resources, Conservation and Recycling},
   volume={154},
@@ -963,7 +963,7 @@ chapter = {6},
 }
 
 @article{van2016phosphorus,
-  title={Phosphorus flows and balances of the European Union Member States},
+  title={{Phosphorus flows and balances of the European Union Member States}},
   author={Van Dijk, Kimo C and Lesschen, Jan Peter and Oenema, Oene},
   journal={Science of the Total Environment},
   volume={542},
@@ -983,7 +983,7 @@ chapter = {6},
 }
 
 @article{senthilkumar2012conceptual,
-  title={Conceptual design and quantification of phosphorus flows and balances at the country scale: The case of France},
+  title={{Conceptual design and quantification of phosphorus flows and balances at the country scale: The case of France}},
   author={Senthilkumar, Kalimuthu and Nesme, Thomas and Mollier, Alain and Pellerin, Sylvain},
   journal={Global Biogeochemical Cycles},
   volume={26},
@@ -1022,3 +1022,12 @@ chapter = {6},
   year={2018},
   publisher={Springer}
 }
+
+@misc{PFlows_Ontario,
+    author = {{Pollution Probe}},
+    title = {{Mapping Phosphorus Flows in the Ontario Economy. Exploring Nutrient Recovery and Reuse Opportunites in a Provincial Context}},
+    institution  = {Pollution Probe},
+    year = {2022},
+    howpublished = "\url{https://www.pollutionprobe.org/mapping-phosphorus-flows-in-the-ontario-economy/}",
+    note = "[Online; accessed 13-July-2022]"
+    }
