--- a/PFlowsPaper/references.bib
+++ b/PFlowsPaper/references.bib
@@ -1026,8 +1026,53 @@ chapter = {6},
 @misc{PFlows_Ontario,
     author = {{Pollution Probe}},
     title = {{Mapping Phosphorus Flows in the Ontario Economy. Exploring Nutrient Recovery and Reuse Opportunites in a Provincial Context}},
-    institution  = {Pollution Probe},
+    institution  = {{Pollution Probe}},
     year = {2022},
     howpublished = "\url{https://www.pollutionprobe.org/mapping-phosphorus-flows-in-the-ontario-economy/}",
+    note = "[Online; accessed 13-July-2022]"
+    }
+
+@misc{WorldIntegratedTradeSolution,
+    author = {{World Integrated Trade Solution}},
+    title = {{Data on Export, Import, Tariff}},
+    institution  = {{The World Bank}},
+    year = {2022},
+    howpublished = "\url{https://wits.worldbank.org/}",
+    note = "[Online; accessed 13-July-2022]"
+    }
+
+@misc{CheminfoServices,
+    author = {{Cheminfo Services Inc.}},
+    title = {{Economic Assessment of the Integrated Steel Industry}},
+    institution  = {{Cheminfo Services Inc.}},
+    year = {2019},
+    howpublished = "\url{https://www.canadiansteel.ca/files/resources/Final-Report-Economic-Assessment-of-the-Integrated-Steel-Industry.pdf}",
+    note = "[Online; accessed 13-July-2022]"
+    }
+
+@misc{AlgomaSteel,
+    author = {{Algoma Steel Inc.}},
+    title = {{Corporate Profile}},
+    institution  = {{Algoma Steel Inc.}},
+    year = {2022},
+    howpublished = "\url{https://algoma.com/about-algoma/corporate-profile/}",
+    note = "[Online; accessed 13-July-2022]"
+    }
+
+@misc{Stelco,
+    author = {{Stelco Inc.}},
+    title = {{Our Facilities}},
+    institution  = {{Stelco Inc.}},
+    year = {2022},
+    howpublished = "\url{https://www.stelco.com/about-us/our-facilities}",
+    note = "[Online; accessed 13-July-2022]"
+    }
+
+@misc{InterprovincialImportsExports,
+    author = {{Statistics Canada - Statisque Canada}},
+    title = {{Interprovincial and international trade flows, basic prices, summary level}},
+    institution  = {{Statistics Canada - Statisque Canada}},
+    year = {2022},
+    howpublished = "\url{https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1210008801}",
     note = "[Online; accessed 13-July-2022]"
     }
