--- a/PFlowsPaper/PFlowsPaper.tex
+++ b/PFlowsPaper/PFlowsPaper.tex
@@ -142,8 +142,12 @@ Regarding greenhouse crops, the data available was limited, resulting in an esti
 
 
 \subsubsection{Industrial sector}
-Phosphorus flows through imports, production, exports and waste for the chemical, steel, forestry, and food and beverage, industries of Ontario were mapped.
-The steel industry is the first non-food sector in terms of phosphorus use. The main phosphorus inflows of steel manufacturing are associated with the use of iron ore, coal, and coke, while the main outflow of phosphorus is within slag, which remove most of the impurities from steel, including phosphorus. It must be noted that, although some minor amounts of phophosphorus can be desired in steel for making anti-corrosion surface coatings, it is largely considered an impurity in the steel manufacturing process. Phosphorus in these flows is estimated multiplyting their average phosphorus content (0.06\% P in iron ore, 0.05\% P for coal, 0.4\% P in slag, and 0.01\% in steel) 176 REF by the steel production capacity of the facilities located in Ontario \citep{CheminfoServices, AlgomaSteel, Stelco, PFlows_Ontario} and the imports and exports of these materials \citep{WorldIntegratedTradeSolution, InterprovincialImportsExports}
+Phosphorus flows through imports, production, exports and waste for the steel, forestry, and food and beverage, industries of Ontario were mapped.
+The steel industry is the first non-food sector in terms of phosphorus use. The main phosphorus inflows of steel manufacturing are associated with the use of iron ore, coal, and coke, while the main outflow of phosphorus is within slag, which remove most of the impurities from steel, including phosphorus. It must be noted that, although some minor amounts of phophosphorus can be desired in steel for making anti-corrosion surface coatings, it is largely considered an impurity in the steel manufacturing process. Phosphorus in these flows is estimated multiplyting their average phosphorus content (0.06\% P in iron ore, 0.05\% P for coal, 0.4\% P in slag, and 0.01\% in steel) 176 REF by the steel production capacity of the facilities located in Ontario \citep{CheminfoServices, AlgomaSteel, Stelco, PFlows_Ontario} and the imports and exports of these materials \citep{WorldIntegratedTradeSolution, InterprovincialImportsExports}.
+
+Phosphorus flows in Ontario's forestry industry includes wood harvesting, wood products manufacturing, as well as the production of pulp and paper. The estimation of these phosphorus flows are the result of multiplying the production data of wood, wood products, pulp and paper, and their retrospectives imports, exports, and waste streams \citep{CanadianForestServiceStatistics, InterprovincialImportsExports}, by the average phosphorus content, which is assumed to be 0.01\% for wood 181 REF and 0.005\% for pulp and paper products REF.
+
+Regarding other industrial activities which could involve the use of phosphorus, the local production of phosphorus is assumed to be negligible since phosphorus is not mined or refined in Ontario, and the synthetic phosphorus fertilizer imports are accounted in the agricultural section. The general chemical facilities located in Ontario report 350 t/year of phosphorus as waste REF, in addition of imports and exports of chemical products REF. However, there exist a significant fraction of untracked phosphorus used in the industrial sector.
 
 \subsubsection{Urban sector}
 
