--- a/PFlowsPaper/references.bib
+++ b/PFlowsPaper/references.bib
@@ -1076,3 +1076,12 @@ chapter = {6},
     howpublished = "\url{https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1210008801}",
     note = "[Online; accessed 13-July-2022]"
     }
+
+@misc{CanadianForestServiceStatistics,
+    author = {{Canadian Forest Service}},
+    title = {{Statistical data}},
+    institution  = {{Natural Resources Canada}},
+    year = {2020},
+    howpublished = "\url{https://cfs.nrcan.gc.ca/statsprofile/}",
+    note = "[Online; accessed 13-July-2022]"
+    }
